adding api requests to frontend
